syntax = "proto3";

package ws;

option go_package = "/proto";

service Broadcaster {
  rpc BroadcastUserAnswered (UserAnsweredRequest) returns (BroadcastResponse);
  rpc BroadcastUserJoined (UserJoinedRequest) returns (BroadcastResponse);
  rpc BroadcastUserLeaved (UserLeavedRequest) returns (BroadcastResponse);
  rpc BroadcastStartSession (StartSessionRequest) returns (BroadcastResponse);
}

message UserJoinedRequest {
  string session_code = 1;
}

message UserLeavedRequest {
  string session_code = 1;
}

message UserAnsweredRequest {
  uint32 user_id = 1;
  string session_code = 2;
}

message StartSessionRequest {
  uint32 quiz_id = 1;
  string session_code = 2;
}

message BroadcastResponse {
  bool success = 1;
  string message = 2;
}
